# chess-bitboard-engine

./: .gitignore  Board.qml  CMakeLists.txt  README.md  Square.qml  main.cpp
AI/: boardevaluator.cpp  boardevaluator.h  minimax.cpp  minimax.h
board/: UISquare.h  boardviewmodel.cpp  boardviewmodel.h
components/: Sidebar.qml
domain/: attack_tables.cpp  attack_tables.h  bitboard.h  move.h  movegenerator.cpp  movegenerator.h  piece.h  position.cpp  position.h  types.h  undo.h
